Status update feed and functions
Now has the ability to send_status_update in the server script (web_ui.py) that posts to a scrolling status feed

--- a/static/style.css
+++ b/static/style.css
@@ -5,3 +5,18 @@
     box-sizing: border-box;
     font-family: 'Arial', sans-serif;
 }
+
+.subsection-status-feed {
+    width: 100%;
+    max-height: 300px;
+    overflow-y: auto;
+    border: 2px solid #282828;
+    padding: 10px;
+    background-color: #b5b5b5;
+}
+
+.card-status-update {
+    padding: 5px;
+    border-bottom: 2px solid #ddd;
+    font-size: 14px;
+}
