--- a/static/style.css
+++ b/static/style.css
@@ -92,6 +92,10 @@ html, body {
     transition: background-color 0.2s, color 0.2s;
 }
 
+.btn-primary {
+    background-color: #222222;
+}
+
 .btn:hover {
     background-color: #444444;
     cursor: pointer;
